--- a/PhysiCell/Makefile
+++ b/PhysiCell/Makefile
@@ -45,7 +45,7 @@ PhysiCell_pugixml.o PhysiCell_settings.o
 
 # put your custom objects here (they should be in the custom_modules directory)
 
-PhysiCell_custom_module_OBJECTS := custom.o submodel_data_structures.o immune_submodel.o
+PhysiCell_custom_module_OBJECTS := custom.o submodel_data_structures.o immune_submodels.o
 
 pugixml_OBJECTS := pugixml.o
 
@@ -143,8 +143,8 @@ custom.o: ./custom_modules/custom.cpp
 submodel_data_structures.o: ./custom_modules/submodel_data_structures.cpp
 	$(COMPILE_COMMAND) -c ./custom_modules/submodel_data_structures.cpp 
 
-immune_submodel.o: ./custom_modules/immune_submodel.cpp
-	$(COMPILE_COMMAND) -c ./custom_modules/immune_submodel.cpp 
+immune_submodels.o: ./custom_modules/immune_submodels.cpp
+	$(COMPILE_COMMAND) -c ./custom_modules/immune_submodels.cpp 
 
 # cleanup
 
